backend setup with candidate details

--- a/templates/templates/dash.html
+++ b/templates/templates/dash.html
@@ -28,17 +28,17 @@
                 <div class="card">
                     <i class="fas fa-file-alt"></i>
                     <h3>Total Certificates</h3>
-                    <p id = 'total-certificate'></p>
+                    <p id = 'total-certificate'>0</p>
                 </div>
-                <div class="card">
+                <div id="validUsers" class="card">
                     <i class="fas fa-check-circle"></i>
                     <h3>Validated Certificates</h3>
-                    <p id ='valid-certificate'></p>
+                    <p id ='valid-certificate'>0</p>
                 </div>
-                <div class="card">
+                <div id="invalidUsers" class="card">
                     <i class="fas fa-times-circle"></i>
                     <h3>Invalid Certificates</h3>
-                    <p id = 'invalid-certificate'></p>
+                    <p id = 'invalid-certificate'>0</p>
                 </div>
             </div>
         </section>
