--- a/templates/templates/form.html
+++ b/templates/templates/form.html
@@ -44,6 +44,6 @@
     <footer>
         <p>&copy; 2023 Certificate Validation System. All rights reserved.</p>
     </footer>
-    <script src="../static/js/form.js"></script>
+    <script type="module" src="../static/js/form.js"></script>
 </body>
 </html>
