adding feedback file and some extra features

--- a/templates/templates/aboutus.html
+++ b/templates/templates/aboutus.html
@@ -146,10 +146,9 @@ footer {
                 <a href="#">Certificate Validation</a>
             </div>
             <div class="nav-links">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
+                <a href="">Home</a>
+                <a href="/about-us">AboutUs</a>
+                <a href="/help">help</a>
             </div>
         </nav>
     </header>
@@ -198,7 +197,7 @@ footer {
     </main>
 
     <footer>
-        <p>&copy; 2023 Certificate Validation System. All rights reserved.</p>
+        <p>&copy;  Certificate Validation System.</p>
     </footer>
 </body>
 </html>
