--- a/templates/templates/form.html
+++ b/templates/templates/form.html
@@ -15,10 +15,10 @@
                 <a href="#"><i class="fas fa-certificate"></i> Certificate Validation</a>
             </div>
             <div class="nav-links">
+                <a href="/">Home</a>
                 <a href="/dashboard">Dashboard</a>
-                <a href="#">Validate</a>
-                <a href="#">Reports</a>
-                <a href="#">Settings</a>
+                <a href="/feedback">feedback</a>
+                <a href="/help">Help</a>
             </div>
         </nav>
     </header>
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Certificate Validation System. All rights reserved.</p>
+        <p>&copy; Certificate Validation System.</p>
     </footer>
     <script type="module" src="../static/js/form.js"></script>
 </body>
