adding some extra stylings

--- a/templates/templates/home.html
+++ b/templates/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificate Validation System</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../static/css/home.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
             <div class="hero-content">
                 <h1>Validate Certificates Effortlessly</h1>
                 <p>Our powerful system streamlines the certificate validation process, ensuring authenticity and integrity.</p>
-                <a href="/login" class="btn">Get Started</a>
+                <a href="/signin" class="btn">Get Started</a>
             </div>
         </section>
 
