--- a/templates/templates/aboutus.html
+++ b/templates/templates/aboutus.html
@@ -178,19 +178,19 @@ footer {
             <h2>Meet Our Team</h2>
             <div class="team-members">
                 <div class="member">
-                    <img src="team-member-1.jpg" alt="Team Member 1">
-                    <h3>John Doe</h3>
-                    <p>CEO and Founder</p>
+                    <img src="https://png.pngtree.com/png-clipart/20230913/original/pngtree-cartoon-male-businessman-in-suit-and-tie-vector-png-image_11082377.png" alt="Team Member 1">
+                    <h3>Angadi dileep kumar</h3>
+                    <p>Project manager</p>
                 </div>
                 <div class="member">
-                    <img src="team-member-2.jpg" alt="Team Member 2">
-                    <h3>Jane Smith</h3>
-                    <p>Chief Technology Officer</p>
+                    <img src="https://png.pngtree.com/png-vector/20201224/ourlarge/pngtree-customer-service-girl-smile-service-business-formal-original-png-image_2592887.jpg" alt="Team Member 2">
+                    <h3>Adeena nazir</h3>
+                    <p>Developer</p>
                 </div>
                 <div class="member">
-                    <img src="team-member-3.jpg" alt="Team Member 3">
-                    <h3>Michael Johnson</h3>
-                    <p>Lead Developer</p>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR68gNCc9Pxx-xL7o_LnRJ31Q7tE7VAh80eYQ&s" alt="Team Member 3">
+                    <h3>Manpreet</h3>
+                    <p>product owner</p>
                 </div>
             </div>
         </section>
