--- a/templates/templates/dash.html
+++ b/templates/templates/dash.html
@@ -58,7 +58,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Certificate Validation System. All rights reserved.</p>
+        <p>&copy;Certificate Validation System</p>
     </footer>
 
     <script type="module" src="../static/js/dash.js"></script>
