adding extra stylings for signin

--- a/templates/templates/home.html
+++ b/templates/templates/home.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Certificate Validation System. All rights reserved.</p>
+        <p>&copy; Certificate Validation System.</p>
     </footer>
 
     <script type="module"  src="/templates/static/js/home.js"></script>
