--- a/templates/templates/signup.html
+++ b/templates/templates/signup.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-image: url('https://static.vecteezy.com/system/resources/thumbnails/011/635/825/small/abstract-square-interface-modern-background-concept-fingerprint-digital-scanning-visual-security-system-authentication-login-vector.jpg');
+            background-image: url('https://images.unsplash.com/photo-1627556704302-624286467c65?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8NXx8fGVufDB8fHx8fA%3D%3D');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -17,9 +17,11 @@
         .container {
             max-width: 400px;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color:rgba(128, 128, 128, 0.5);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
+            border-radius: 20px;
+            
+            
         }
         .form-control {
             border-radius: 5px;
@@ -32,6 +34,7 @@
         h2 {
             text-align: center;
             margin-bottom: 20px;
+            color: wheat;
         }
     </style>
 </head>
