changin about page

--- a/templates/templates/aboutus.html
+++ b/templates/templates/aboutus.html
@@ -54,7 +54,9 @@ nav {
 
 /* Hero section */
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('hero-image.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://img.freepik.com/premium-photo/website-internet-contact-us-page-concept-with-phone-chat-email-mail-icons-symbol-telephone-mail-address-mobile-phone-website-page-contact-us-web-banner-copy-space-blue-background_256259-2441.jpg');
+
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('hero-image.jpg'); */
     background-size: cover;
     background-position: center;
     height: 500px;
@@ -143,11 +145,10 @@ footer {
     <header>
         <nav>
             <div class="logo">
-                <a href="#">Certificate Validation</a>
+                <a href="/">Certificate Validation</a>
             </div>
             <div class="nav-links">
-                <a href="">Home</a>
-                <a href="/about-us">AboutUs</a>
+                <a href="/">Home</a>
                 <a href="/help">help</a>
             </div>
         </nav>
@@ -156,7 +157,7 @@ footer {
     <main>
         <section class="hero">
             <h1>About Us</h1>
-            <p>Learn more about our company and our mission.</p>
+            <p>Learn more about our project and our mission.</p>
         </section>
 
         <section class="about-content">
@@ -165,7 +166,7 @@ footer {
                 <p>We are a leading provider of certificate validation services, dedicated to ensuring the authenticity and integrity of certificates across various industries. With years of experience and a team of experts, we strive to deliver reliable and efficient solutions to our clients.</p>
             </div>
             <div class="about-image">
-                <img src="about-image.jpg" alt="About Image">
+                <img src="https://st3.depositphotos.com/1337322/31715/i/450/depositphotos_317156376-stock-photo-contact-us-cubes-set-spotlighted.jpg" alt="About Image">
             </div>
         </section>
 
