--- a/templates/templates/dash.html
+++ b/templates/templates/dash.html
@@ -11,10 +11,11 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#"><i class="fas fa-certificate"></i> Certificate Validation</a>
+                <a href="/"><i class="fas fa-certificate"></i> Certificate Validation</a>
             </div>
             <div class="nav-links">
                 <a href="/">home</a>
+                <a href="/about-us">aboutus</a>
                 <a href="/feedback">feedback</a>
                 <a href="/help">help</a>
             </div>
