--- a/templates/templates/home.html
+++ b/templates/templates/home.html
@@ -15,7 +15,7 @@
             </div>
             <div class="nav-links">
                 <a href="{% url 'aboutus' %}">about US</a>
-                <a href="{% url 'login' %}">login</a>
+                <a href="/signin">login</a>
                 <a href="{% url 'help' %}">help</a>
             </div>
         </nav>
