--- a/templates/templates/feedback.html
+++ b/templates/templates/feedback.html
@@ -136,6 +136,7 @@ button:hover {
             </div>
             <div class="nav-links">
                 <a href="">Home</a>
+                <a href="/dashboard">dashboard</a>
                 <a href="/about-us">About Us</a>
                 <a href="/help">Help</a>
             </div>
